[gd_scene load_steps=3 format=3 uid="uid://djoxwlrttiqk4"]

[ext_resource type="Script" path="res://addons/Uzil/Core/Vals/_test/test_vals.gd" id="1_dp4qx"]
[ext_resource type="Script" path="res://addons/Uzil/Test/misc/test_debug_log.gd" id="2_mvt15"]

[node name="root" type="Control" node_paths=PackedStringArray("debug_log", "user_item_prefab", "user_item_container", "modifier_message_edit", "filter_tags_edit", "current_val_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dp4qx")
debug_log = NodePath("VBoxContainer2/Control/debug_text_edit")
user_item_prefab = NodePath("VBoxContainer2/HBoxContainer/VBoxContainer/UserPrefab")
user_item_container = NodePath("VBoxContainer2/HBoxContainer/VBoxContainer")
modifier_message_edit = NodePath("VBoxContainer2/HBoxContainer/VBoxContainer/Option1/HBoxContainer/ModifyMsgEdit")
filter_tags_edit = NodePath("VBoxContainer2/HBoxContainer/VBoxContainer/Option1/HBoxContainer/TagEdit")
current_val_label = NodePath("VBoxContainer2/HBoxContainer/VBoxContainer/CurrentVal/HBoxContainer/BoxContainer/RichTextLabel")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="debug_text_edit" type="TextEdit" parent="VBoxContainer2/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_mvt15")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8

[node name="CurrentVal" type="Panel" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer/CurrentVal"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.002
anchor_bottom = 1.0
offset_right = -0.0900269

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer/CurrentVal/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/VBoxContainer/CurrentVal/HBoxContainer/CenterContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_vertical = 4
bbcode_enabled = true
text = "[b]Current  Value[/b]"
fit_content = true
autowrap_mode = 0

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer/CurrentVal/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="Control" type="Control" parent="VBoxContainer2/HBoxContainer/VBoxContainer/CurrentVal/HBoxContainer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.01

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/VBoxContainer/CurrentVal/HBoxContainer/BoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.99
text = "Current  Value"
fit_content = true
autowrap_mode = 0

[node name="Option1" type="Panel" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Option1"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.002
anchor_bottom = 1.0
offset_right = -0.0900269

[node name="ModifyMsgTitle" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Option1/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
bbcode_enabled = true
text = "[b]Modify Message[/b]"
fit_content = true
autowrap_mode = 0

[node name="ModifyMsgEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Option1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
placeholder_text = "string, int, float ..."

[node name="TagTitle" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Option1/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
bbcode_enabled = true
text = "[b]Tag Filters[/b]"
fit_content = true
autowrap_mode = 0

[node name="TagEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer/VBoxContainer/Option1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
placeholder_text = "postive, -negtive"

[node name="UserPrefab" type="Panel" parent="VBoxContainer2/HBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2/HBoxContainer/VBoxContainer/UserPrefab"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.002
anchor_bottom = 1.0
offset_right = -0.0900269

[node name="User" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/VBoxContainer/UserPrefab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
bbcode_enabled = true
text = "[b]User[/b]"
fit_content = true
autowrap_mode = 0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer2/HBoxContainer/VBoxContainer/UserPrefab/HBoxContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
color = Color(0.380392, 0.380392, 0.380392, 1)

[node name="ValueTitle" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/VBoxContainer/UserPrefab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
text = "Value"
fit_content = true
autowrap_mode = 0

[node name="ValueEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer/VBoxContainer/UserPrefab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
placeholder_text = "string, int, float ..."

[node name="TagTitle" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/VBoxContainer/UserPrefab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.1
text = "Tags"
fit_content = true
autowrap_mode = 0

[node name="TagEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer/VBoxContainer/UserPrefab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
placeholder_text = "string"

[node name="PriorityTitle" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/VBoxContainer/UserPrefab/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
size_flags_stretch_ratio = 0.1
text = "Priority"
fit_content = true
autowrap_mode = 0

[node name="PriorityEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer/VBoxContainer/UserPrefab/HBoxContainer"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
placeholder_text = "int"

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.2

[node name="simple" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(132, 68)
layout_mode = 2
text = "test_simple()"

[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer2/simple" to="." method="test_simple"]
